Remove dependency on cglib